# rag-financial-auditor

./: .gitignore  BACKLOG.md  CONCEPTS.md  README.md  pyproject.toml  requirements.txt
app/: config.py  models.py
app/api/: main.py
app/audit/: auditor.py  requirements.py
app/ingestion/: chunker.py  embedder.py  loader.py
app/llm/: client.py  prompts.py
app/retrieval/: context.py  retriever.py
docs/superpowers/plans/: 2026-06-01-financial-compliance-auditor.md
scripts/: prepare_eval_pdf.py
tests/: conftest.py
tests/test_api/: test_main.py
tests/test_audit/: test_auditor.py
tests/test_ingestion/: test_chunker.py  test_embedder.py  test_loader.py
tests/test_llm/: test_prompts.py
tests/test_retrieval/: test_context.py  test_retriever.py
